--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -2,7 +2,7 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a & */
-@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&family=Lato:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Rock+Salt&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -12,19 +12,19 @@ Fonts are separated by a & */
   --accent2-color: #75E4B3;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: "Rock Salt";
+  --paragraph-font: Roboto, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: black;  /* headlines on a white background */ 
-  --headline-color-on-color: #FFFFFF; /* headlines on a colored background */ 
-  --paragraph-color-on-white: black; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: #FFFFFF; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #000000;
-  --nav-link-color: #396E94;
+  --headline-color-on-white: #561F37;  /* headlines on a white background */ 
+  --headline-color-on-color: #39A2AE ; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #55DBCB; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #561F37; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #39A2AE;
+  --nav-link-color: #561F37 ;
   --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --nav-hover-link-color: #561F37 ;
+  --nav-hover-background-color: #75E4B3;
 }
 
 
