--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -18,7 +18,7 @@ Fonts are separated by a & */
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #561F37;  /* headlines on a white background */ 
   --headline-color-on-color: #561F37  ; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #55DBCB; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: #561F37; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #561F37; /* paragraph text on a colored background */ 
   --paragraph-background-color: #D4AC0D;
   --nav-link-color: #561F37 ;
