--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -7,9 +7,9 @@ Fonts are separated by a & */
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #561F37   ;
-  --secondary-color: #39A2AE ;
-  --accent1-color: #55DBCB;
-  --accent2-color: #75E4B3;
+  --secondary-color: #abdae1 ;
+  --accent1-color: #CE8147;
+  --accent2-color: #59656F;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Rock Salt";
@@ -17,14 +17,14 @@ Fonts are separated by a & */
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #561F37;  /* headlines on a white background */ 
-  --headline-color-on-color: #561F37  ; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #561F37; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: #561F37; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #D4AC0D;
+  --headline-color-on-color: #561F37; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #59656F; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #CE8147; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #abdae1  ;
   --nav-link-color: #561F37 ;
-  --nav-background-color: #D4AC0D;
+  --nav-background-color: #59656F;
   --nav-hover-link-color: #561F37 ;
-  --nav-hover-background-color: #75E4B3;
+  --nav-hover-background-color: #CE8147;
 }
 
 
