--- a/aboutme/styles/styles.css
+++ b/aboutme/styles/styles.css
@@ -1,36 +1,54 @@
 body {
     text-align: center;
   }
-
   nav {
     background-color: steelblue;
     padding: 10px;
+    text-align: center;
   }
-
   a {
     color: white;
     margin: 40px;
+    font-size: 1.5em;
   }
-
+  a:hover {
+    background-color: white;
+    color: steelblue;
+  }
   h1 {
     color: steelblue;
   }
   img {
-    width: 800px;
-    border: 4px solid steelblue;
+    width: 80%;
+    display: block;
+    margin: 0 auto;
   }
   p {
-    padding: 10px;
+    width: 80%;
+    text-align: center;
   }
   footer {
     background-color: steelblue;
     color: white;
+    padding: 10px;
+    text-align: center;
+  }
+  footer p {
+    font-size: 20px;
+    margin: 20px auto;
   }
   .main-para {
     font-size: 1.5em;
     line-height: 1.5em;
+    text-align: center;
   }
   #active {
     background-color: white;
     color: steelblue;
   }
+
+  main p {
+    width: 80%;
+    margin: 50px auto;
+  }
+ 
