--- a/aboutme/styles/styles.css
+++ b/aboutme/styles/styles.css
@@ -1,15 +1,17 @@
 body {
     text-align: center;
+    margin: 0
   }
   nav {
     background-color: steelblue;
-    padding: 10px;
+    padding: 25px;
     text-align: center;
   }
   a {
     color: white;
     margin: 40px;
     font-size: 1.5em;
+    padding: 25px;
   }
   a:hover {
     background-color: white;
@@ -17,11 +19,13 @@ body {
   }
   h1 {
     color: steelblue;
+    margin: 50px 0;
   }
   img {
     width: 80%;
     display: block;
     margin: 0 auto;
+    border: 4px solid steelblue;
   }
   p {
     width: 80%;
@@ -36,6 +40,7 @@ body {
   footer p {
     font-size: 20px;
     margin: 20px auto;
+    padding: 25px;
   }
   .main-para {
     font-size: 1.5em;
