--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Rock+Salt&display=swap');
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -6,6 +8,7 @@ nav a {
     text-align: center;
     color: white;
     text-decoration: none;
+    padding: 35px;
 }
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
@@ -22,9 +25,13 @@ main section {
 }
 body {
     background-color: gainsboro ;
+    font-family: 'Rock Salt', 'Bradley Hand', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 header {
     background-color: #561F37 ;
+    font-family: 'Roboto';
 }
 nav a:hover {
     background-color: black;
@@ -33,7 +40,12 @@ nav a:hover {
 .book, .join {
     background-color: #561F37;
     color: white;
+    font-family: 'Roboto';
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover {
     background-color: #CE8147;
@@ -41,13 +53,20 @@ nav a:hover {
 }
 .msg {
     background-color: #561F37;
+    line-height: 1.5em;
+    padding: 35px;
 }
 footer {
-    background-color: #561F37;
+    background-color: #59656F;
     color: white;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 .home-title {
     color: black;
+    font-family: 'Rock Salt', 'Bradley Hand', sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
 }
 h4 {
     color: #561F37;
@@ -57,6 +76,8 @@ h4 {
 }
 .msg p {
     color: white;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 footer a{
     color: white;
@@ -70,6 +91,7 @@ footer a:hover {
 }
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 #hero-img {
     width: 100%;
@@ -79,4 +101,22 @@ footer p {
 }
 footer p a:hover {
     text-decoration: underline;
+}
+h2 {
+    margin: 0;
+}
+#logo_link {
+    padding-top: 5px;
+}
+footer .social img {
+    padding-top: 15px;
+}
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+.card img {
+    border: 10px solid #d9c2a3;
+}
+main section img {
+    box-sizing: border-box;
 }
