--- a/bookreviews/styles/site-plan.css
+++ b/bookreviews/styles/site-plan.css
@@ -11,8 +11,8 @@ Fonts are separated by a | */
   --accent2-color: #FBC936;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: 'Leckerli one';
-  --paragraph-font: 'Roboto', sans-serif;
+  --heading-font: Leckerli one;
+  --paragraph-font: Roboto, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #B8A470 ;  /* headlines on a white background */ 
