--- a/bookreviews/styles/site-plan.css
+++ b/bookreviews/styles/site-plan.css
@@ -1,7 +1,7 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css2?family=Leckerli+One&family=Roboto+Condensed:wght@300&family=Rock+Salt&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Leckerli+One&family=Roboto+Condensed:wght@300&family=Rock+Salt&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -12,12 +12,12 @@ Fonts are separated by a | */
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Leckerli one";
-  --paragraph-font: "Roboto", Helvetica, sans-serif;
+  --paragraph-font: "Amatic SC", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #B8A470 ;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #FF6666; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: black; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
   --paragraph-background-color: #B8A470  ;
   --nav-link-color: #FF6666;
