--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -21,10 +21,10 @@ main section {
 }
 #background {
     height: 725px;
-    background-color: #59656F;
+    background-color: #d9c2a3;
 }
 body {
-    background-color: gainsboro ;
+    background-color: #d9c2a3 ;
     font-family: 'Roboto', 'Bradley Hand', sans-serif;
     margin: 0;
     padding: 0;
@@ -121,11 +121,11 @@ h2 {
 footer .social img {
     padding-top: 15px;
 }
-.rivers-card, .camping-card, .rapids-card {
-    margin: 200px 0;
+.rivers-card, .camping-card, .rapids-card, .rivers2-card {
+    margin: 50px 0;
 }
 .card img {
-    border: 10px solid #d9c2a3;
+    border: 10px solid #abdae1;
     transition: transform .5s;
     box-shadow: 5px 5px 10px #6f7364;
 }
@@ -160,13 +160,17 @@ nav{
 }
 .card-img, .mountains {
     width: 100%;
-    border: 10px solid #d9c2a3;
+    border: 10px solid #abdae1;
 }
 .rivers-card{
     grid-column: 2/4;
     grid-row: 2/3;
 }
 .camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rivers2-card{
     grid-column: 5/7;
     grid-row: 2/3;
 }
@@ -212,15 +216,15 @@ nav{
         font-size: 25px;
         color: #6f7364;
     }
-    .rivers-card, .camping-card, .rapids-card { 
+    .rivers-card, .camping-card, .rapids-card, .rivers2-card{ 
         margin: 50px auto;
-        width: 60%;
+        width: 80%;
     }
     #background {
         display: none;
     }
     .mountains, .msg {
-        width: 80%;
+        width: 100%;
         display: block;
         margin: 0 auto;
     }
