--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -21,7 +21,7 @@ main section {
 }
 #background {
     height: 725px;
-    background-color: #d9c2a3;
+    background-color: #6f7364;
 }
 body {
     background-color: #d9c2a3 ;
@@ -122,10 +122,10 @@ footer .social img {
     padding-top: 15px;
 }
 .rivers-card, .camping-card, .rapids-card, .rivers2-card {
-    margin: 50px 0;
+    margin: 200px 0;
 }
 .card img {
-    border: 10px solid #abdae1;
+    border: 10px solid #561F37;
     transition: transform .5s;
     box-shadow: 5px 5px 10px #6f7364;
 }
@@ -141,7 +141,7 @@ nav{
     grid-template-columns: 1fr 3fr 1fr;
     margin-top: -100px; 
 }
-#hero-box {
+#hero-box{
     grid-column: 1/4;
     grid-row: 1/3;
     z-index: -1;
@@ -160,7 +160,7 @@ nav{
 }
 .card-img, .mountains {
     width: 100%;
-    border: 10px solid #abdae1;
+    border: 10px solid #561F37;
 }
 .rivers-card{
     grid-column: 2/4;
@@ -190,6 +190,149 @@ nav{
 .card-img:hover {
     opacity: .6;
     transform: scale(1.1);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+#content\ {
+    max-width: 1600px;
+    margin: 0 auto;
+}
+nav a {
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    padding: 35px;
+}
+#background\ {
+    height: 100px;
+    background-color: #d9c2a3;
+}
+body {
+    background-color: #abdae1 ;
+    font-family: 'Roboto', 'Bradley Hand', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+header {
+    background-color: #561F37 ;
+    font-family: 'Roboto';
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+nav a:hover {
+    background-color: black;
+    color: white;
+}
+footer {
+    background-color: #59656F;
+    color: white;
+    padding: 25px 50px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.msg p {
+    color: white;
+    font-size: .8em;
+    padding-bottom: 15px;
+}
+footer a{
+    color: white;
+    text-decoration: none;
+}
+footer a:hover {
+    color: #abdae1;
+}
+.logo\ {
+    width: 10px;
+}
+.icon\ {
+    width: 80px;
+    padding-top: 10px;
+}
+#grandcanyonriver-img {
+    width: 100%;
+}
+footer p {
+    font-size: 1.2em;
+}
+footer p a:hover {
+    text-decoration: underline;
+}
+h2 {
+    margin: 0;
+}
+#logo_link\ {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+footer .social img {
+    padding-top: 15px;
+}
+.rivers1-card, .rivers2-card, .rivers3-card {
+    margin: 200px 0;
+}
+.rivers1-img, .rivers2-img, .rivers3-img {
+    border: 10px solid #561F37;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+main section img {
+    box-sizing: border-box;
+}
+nav{
+    display: flex;
+    justify-content: space-around;
+}
+#grandcanyonriver{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+#grandcanyonriver-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+.home-grid1{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+.rivers1-img, .rivers2-img, .rivers3-img{
+    width: 100%;
+    border: 10px solid #561F37;
+}
+.rivers1-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.rivers2-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rivers3-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+#background\ {
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+.msg\ {
+    text-align: center;
 }
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
@@ -224,7 +367,7 @@ nav{
         display: none;
     }
     .mountains, .msg {
-        width: 100%;
+        width: 80%;
         display: block;
         margin: 0 auto;
     }
