--- a/bookreviews/styles/styles.css
+++ b/bookreviews/styles/styles.css
@@ -53,7 +53,7 @@ nav a:hover {
 }
 #home-msg h1 {
     text-align: left;
-    color: white;
+    color: black;
 }
 body {
     background-color: #b8a470 ;
