--- a/bookreviews/styles/styles.css
+++ b/bookreviews/styles/styles.css
@@ -55,7 +55,7 @@ nav a:hover {
 }
 #home-msg h1 {
     text-align: left;
-    color: black;
+    color: white;
 }
 body {
     background-color: #b8a470 ;
